--- a/gs-accessing-data-jpa/pom.xml
+++ b/gs-accessing-data-jpa/pom.xml
@@ -5,8 +5,8 @@
 	<groupId>org.springframework</groupId>
 	<artifactId>gs-accessing-data-jpa</artifactId>
 	<version>0.1.0</version>
-	<packaging>jar</packaging>
- 
+	<packaging>war</packaging>
+
 	<name>gs-accessing-data-jpa</name>
 	<url>http://maven.apache.org</url>
 	<parent>
@@ -51,6 +51,10 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>4.1.3.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -58,25 +62,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>2.7.1</version>
+			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>spring-releases</id>
-			<name>Spring Releases</name>
-			<url>https://repo.spring.io/libs-release</url>
-		</repository>
-		<repository>
-			<id>org.jboss.repository.releases</id>
-			<name>JBoss Maven Release Repository</name>
-			<url>https://repository.jboss.org/nexus/content/repositories/releases</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-releases</id>
-			<name>Spring Releases</name>
-			<url>https://repo.spring.io/libs-release</url>
-		</pluginRepository>
-	</pluginRepositories>
+	<!-- <repositories> <repository> <id>spring-releases</id> <name>Spring Releases</name> 
+		<url>https://repo.spring.io/libs-release</url> </repository> <repository> 
+		<id>org.jboss.repository.releases</id> <name>JBoss Maven Release Repository</name> 
+		<url>https://repository.jboss.org/nexus/content/repositories/releases</url> 
+		</repository> </repositories> <pluginRepositories> <pluginRepository> <id>spring-releases</id> 
+		<name>Spring Releases</name> <url>https://repo.spring.io/libs-release</url> 
+		</pluginRepository> </pluginRepositories> -->
 </project>
